[workspace]
members = ["local", "central", "shared"]
resolver = "2"

[workspace.dependencies]
beam-lib = { git = "https://github.com/samply/beam", features = [
  "http-util",
], branch = "develop" }
clap = { version = "4.4", features = ["derive", "env"] }
once_cell = "1"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
shared = { path = "./shared" }
tracing = "0.1"
tracing-subscriber = "0.3.0"
anyhow = "1"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[profile.bloat]
inherits = "release"
strip = false
