[package]
name = "central"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
beam-lib = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features= ["signal"] }
once_cell = { workspace = true }
shared = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_json = "1"
rand = "0.8"
