[package]
name = "central"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
beam-lib = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
once_cell = { workspace = true }
shared = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_json = "1"
rand = "0.9"
reqwest = { version = "0.12", default_features = false, features = ["default-tls"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = "2.1.3"
chrono = "0.4"
icinga-client = { git = "https://github.com/samply/icinga-client.git", tag = "v0.1.0", version = "0.1.0" }
toml = "0.8.20"
